--- a/mobile/main.html
+++ b/mobile/main.html
@@ -285,7 +285,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx rentType">
+                                        <div class="imgBx saleType">
                                             <img src="./images/renew/sample_car1.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -333,7 +333,7 @@
                                 </li>
                                 <li class="swiper-slide">
                                     <a href="#">
-                                        <div class="imgBx">
+                                        <div class="imgBx rentType">
                                             <img src="./images/renew/sample_car4.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
@@ -960,11 +960,9 @@
                             <div class="carThemeBx">
                                 <ul class="carThemeList">
                                     <li data-aos="fade-up" data-aos-offset="100">
-                                        <a href="#">
-                                            <div class="imgBx">
-                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
-                                                <span class="state">상담진행중</span>
-                                                <span class="saleType">구매</span>
+                                        <a href="#">    
+                                            <div class="imgBx saleType">
+                                                <img src="./images/renew/sample_car2.png" alt="자동차샘플">
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -981,9 +979,8 @@
                                     </li>
                                     <li data-aos="fade-up" data-aos-offset="100">
                                         <a href="#">
-                                            <div class="imgBx">
-                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
-                                                <span class="saleType">구매</span>
+                                            <div class="imgBx saleType">
+                                                <img src="./images/renew/sample_car1.png" alt="자동차샘플">
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1000,10 +997,8 @@
                                     </li>
                                     <li data-aos="fade-up">
                                         <a href="#">
-                                            <div class="imgBx">
+                                            <div class="imgBx saleType">
                                                 <img src="./images/renew/sample_car3.png" alt="자동차샘플">
-                                                <span class="state">상담진행중</span>
-                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1020,9 +1015,8 @@
                                     </li>
                                     <li data-aos="fade-up">
                                         <a href="#">
-                                            <div class="imgBx">
-                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
-                                                <span class="saleType">구매</span>
+                                            <div class="imgBx saleType">
+                                                <img src="./images/renew/sample_car4.png" alt="자동차샘플">
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1039,9 +1033,8 @@
                                     </li>
                                     <li data-aos="fade-up" data-aos-offset="100">
                                         <a href="#">
-                                            <div class="imgBx">
+                                            <div class="imgBx saleType">
                                                 <img src="./images/renew/sample_car3.png" alt="자동차샘플">
-                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1056,9 +1049,9 @@
                                     </li>
                                     <li data-aos="fade-up" data-aos-offset="100">
                                         <a href="#">
-                                            <div class="imgBx">
+                                            <span class="state">상담진행중</span>
+                                            <div class="imgBx saleType">
                                                 <img src="./images/renew/sample_car3.png" alt="자동차샘플">
-                                                <span class="saleType">구매</span>
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1075,9 +1068,9 @@
                                     </li>
                                     <li data-aos="fade-up">
                                         <a href="#">
-                                            <div class="imgBx">
-                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
-                                                <span class="saleType">구매</span>
+                                            <span class="state">상담진행중</span>
+                                            <div class="imgBx saleType">
+                                                <img src="./images/renew/sample_car2.png" alt="자동차샘플">
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1094,9 +1087,9 @@
                                     </li>
                                     <li data-aos="fade-up">
                                         <a href="#">
-                                            <div class="imgBx">
-                                                <img src="./images/renew/sample_car3.png" alt="자동차샘플">
-                                                <span class="saleType">구매</span>
+                                            <span class="state">상담진행중</span>
+                                            <div class="imgBx saleType">
+                                                <img src="./images/renew/sample_car1.png" alt="자동차샘플">
                                             </div>
                                             <div class="carTxtCon">
                                                 <dl class="txtTit">
@@ -1144,24 +1137,23 @@
                     <ul>
                         <li>
                             <a href="#">
-                                <img src="./images/renew/icon/finance-ci-lotte.png" />
+                                <img src="./images/renew/icon/finance-ci-lotte.svg" />
                                 <span>롯데캐피탈</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./images/renew/icon/finance-ci-kb.png" />
+                                <img src="./images/renew/icon/finance-ci-kb.svg" />
                                 <span>KB캐피탈</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./images/renew/icon/finance-ci-sh.png" />
+                                <img src="./images/renew/icon/finance-ci-sh.svg" />
                                 <span>신한카드</span>
                             </a>
                         </li>
                     </ul>
-
                 </div>
 
 
