--- a/mobile/buy_list.html
+++ b/mobile/buy_list.html
@@ -53,7 +53,7 @@
             <!--로고-->
             <button type="button" id="carPrevButton" class="ir bt-page-prev" onclick="location.href='./main.html'">이전 페이지</button>
             <!--페이지명-->
-            <h2 class="page-title">중고차 구매하기</h2>
+            <h2 class="page-title">차량검색</h2>
             <div class="button-wrap">   
                 <button type="button" class="bt-sidemenu">
                     <span class="line"></span>
