--- a/mobile/car_list.html
+++ b/mobile/car_list.html
@@ -833,9 +833,9 @@
               </div>
               <div class="list-tab">
                 <ul>
-                  <li class="on"><button>전체</button></li>
-                  <li><button>구매</button></li>
-                  <li><button>렌트</button></li>
+                  <li class="on"><button onclick="location.href='./car_list.html'">전체</button></li>
+                  <li><button>구매</button onclick="location.href='./buy_list.html'"></li>
+                  <li><button>렌트</button onclick="location.href='./rent_list.html'"></li>
                 </ul>
               </div>
               <div class="list-head">
@@ -868,8 +868,8 @@
                     <div class="swiper-container popular-slider swiper-initialized swiper-horizontal swiper-ios">
                       <div class="swiper-wrapper" id="swiper-wrapper-4c57ed5d7b3494af" aria-live="polite" style="cursor: grab;">
                         <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 27" style="width: 284px; margin-right: 16px;" onclick="location.href='./car-detail.html'">
-                          <div class="img-wrap saleType">
-                            <img src="https://img-mycarsave.lotterentacar.net/uploadFile/2024/05/10/LFILE_000016700820240510140623.png" alt="차량이미지">
+                          <div class="img-wrap rentType">
+                            <img src="https://img-mycarsave.lotterentacar.net/uploadFile/2024/03/11/LFILE_000012420120240311112158.png" alt="차량이미지">
                             <div class="timesaleWrap2">
                               <span class="ico-timesale1"></span>
                               <span class="txt">한정 특가</span>
@@ -884,14 +884,14 @@
                                   <li class="certification">무사고</li>
                                 </ul>
                               </div>
-                              <dt>기아 신형K5 2.0 가솔린 프레스티지</dt>
-                              <dd>2023/04(23년형)</dd>
-                              <dd>24,896km</dd>
+                              <dt>현대 쏘나타(DN8) G2.0 프리미엄 플러스</dt>
+                              <dd>2022/08(22년형)</dd>
+                              <dd>36,975km</dd>
                             </dl>
                             <div>
-                              <p><var>14,468,000</var>원 <span></span>
+                              <p>월 <var>426,000</var>원 <span> / 24개월</span>
                               </p>
-                              <span class="price2"><var>12,000,000</var>원 </span>
+                              <span class="price2">월 <var>473,000</var>원 </span>
                             </div>
                           </div>
                         </div>
@@ -923,7 +923,7 @@
                           </div>
                         </div>
                         <div class="swiper-slide" role="group" aria-label="3 / 27" style="width: 284px; margin-right: 16px;" onclick="location.href='./car-detail.html'">
-                          <div class="img-wrap saleType">
+                          <div class="img-wrap rentType">
                             <img src="https://img-mycarsave.lotterentacar.net/uploadFile/2024/06/17/LFILE_000019610520240617130359.png" alt="차량이미지">
                             <div class="timesaleWrap2">
                               <span class="ico-timesale1"></span>
@@ -943,9 +943,9 @@
                               <dd>43,702km</dd>
                             </dl>
                             <div>
-                              <p><var>13,424,000</var>원 <span></span>
+                              <p>월 <var>426,000</var>원 <span> / 24개월</span>
                               </p>
-                              <span class="price2"><var>12,471,000</var>원 </span>
+                              <span class="price2">월 <var>473,000</var>원 </span>
                             </div>
                           </div>
                         </div>
@@ -1227,7 +1227,7 @@
                     </li>
                     <li class="list-item ">
                       <a class="link-detail-view" href="./car-detail.html">
-                        <div class="list-thumb saleType">
+                        <div class="list-thumb rentType">
                           <img src="https://img-mycarsave.lotterentacar.net/uploadFile/2024/09/23/LFILE_000026415920240923095953.png/dims/resize/828x620" alt="차량이미지">
                         </div>
                         <div class="list-detail">
@@ -1238,7 +1238,8 @@
                           </div>
                           <div class="list-price">
                             <div class="price">
-                              <span class="prc"><var>15,428,000</var>원 </span>
+                              <span class="prc">월 <var>613,000</var>원 </span>
+                              <span class="period"> / 24개월</span>
                             </div>
                           </div>
                         </div>
