--- a/mobile/buy_list.html
+++ b/mobile/buy_list.html
@@ -833,14 +833,14 @@
               </div>
               <div class="list-tab">
                 <ul>
-                  <li class="on"><button>전체</button></li>
-                  <li><button>구매</button></li>
-                  <li><button>렌트</button></li>
+                  <li><button onclick='location.href="./car_list.html"'>전체</button></li>
+                  <li class="on"><button onclick='location.href="./buy_list.html"'>구매</button></li>
+                  <li><button onclick='location.href="./rent_list.html"'>렌트</button></li>
                 </ul>
               </div>
               <div class="list-head">
                 <p class="list-total-count">
-                  <var> 1,038 </var>대
+                  <var> 823 </var>대
                 </p>
                 <div class="list-filter">
                   <button type="button" class="bt-condition-align">
