--- a/mobile/main.html
+++ b/mobile/main.html
@@ -182,7 +182,7 @@
             <div class="mainVisualBx">
                 <div class="visualTxt">
                     <div class="vsLeft">
-                        <a href="./buy_list.html">
+                        <a href="./car_list.html">
                             <h3 class="vsTit">구매하기</h3>
                             <span class="vsEx">3일 환불보장<br />홈서비스 받고 구매하기</span>
                             <i class="btnAroow"></i> 
@@ -207,7 +207,7 @@
 
                 <div class="srhBx">
                     <p class="txt"><span class="countNum" data-start="0" data-end="1009"></span> 대의 차량이 기다리고 있어요!</p>
-                    <button type="button" class="btnSrhOpen">어떤 차량이 궁금하세요?</button>
+                    <button type="button" class="btnSrhOpen" onclick='location.href="./car_list.html"'>어떤 차량이 궁금하세요?</button>
                     <i class="iconSroll"></i>
                 </div>  
                 <script>
@@ -455,7 +455,7 @@
                                 <li class="swiper-slide">
                                     <a href="#">
                                         <span class="state">상담진행중</span>
-                                        <div class="imgBx saleType">
+                                        <div class="imgBx rentType">
                                             <img src="./images/renew/sample_car3.png" alt="자동차샘플">
                                         </div>
                                         <div class="carTxtCon">
