--- a/mobile/car_list.html
+++ b/mobile/car_list.html
@@ -833,9 +833,9 @@
               </div>
               <div class="list-tab">
                 <ul>
-                  <li class="on"><button onclick="location.href='./car_list.html'">전체</button></li>
-                  <li><button>구매</button onclick="location.href='./buy_list.html'"></li>
-                  <li><button>렌트</button onclick="location.href='./rent_list.html'"></li>
+                  <li class="on"><button onclick='location.href="./car_list.html"'>전체</button></li>
+                  <li><button onclick='location.href="./buy_list.html"'>구매</button></li>
+                  <li><button onclick='location.href="./rent_list.html"'>렌트</button></li>
                 </ul>
               </div>
               <div class="list-head">
