--- a/mobile/direct_01.html
+++ b/mobile/direct_01.html
@@ -35,7 +35,7 @@
 	<div class="layout--header">
 		<header>
             <a href="./car-detail.html" class="ir bt-page-prev">뒤로가기</a>
-			<h2 class="page-title">다이렉트 견적</h2>
+			<h2 class="page-title">계약</h2>
 		</header>
 		<div class="side-menu " id="sideMenu">
 			<div class="user-sec">
@@ -331,7 +331,7 @@
                 
                 <!-- 계산 최종금액 -->
                 <div class="calculate">
-                    <div class="warranty-price">
+                    <div class="warranty-price" style="display:none;">
                         <div class="title">
                             <h3>롯데 Warranty</h3>
                             <span class="more">자세히보기</span>
