--- a/mobile/direct_01.html
+++ b/mobile/direct_01.html
@@ -337,7 +337,7 @@
         </div>
         <div class="btn-wrap">
             <button type="button">상담 신청하기</button>
-            <button type="button" class="contract" onclick="location.href='./direct_01_1.html'">다음</button>
+            <button type="button" class="contract" onclick='location.href="./direct_01_1.html"'>다음</button>
         </div>
     </div>
 </body>
