MO 스크립트 수정파일 등록

--- a/mobile/direct_01.html
+++ b/mobile/direct_01.html
@@ -294,51 +294,65 @@
 
 
     
-    <!-- 팝업 -->
-    <div class="layer_popup custom-alert-pop">
-        <button class="btn-show"></button>
-        <div class="pop_inner">
-            <div class="pop-head">
-            </div>
-            <!-- 컨텐츠 -->
-            <div class="pop-contents agree-accordion-wrap">
-                <!-- 견적박스 -->
-                <div class="price-box">
-                    <h3 class="pop-tit">다이렉트 견적</h3>
-                    <h4>제네시스 더 올뉴 G80 가솔린 2.5 2WD 기본형</h4>
-                    <div class="ex-box">
-                        <ul>
-                            <li>
-                                <div class="tit">신차가</div>
-                                <span>48,500,000원</span>
-                            </li>
-                            <li>
-                                <div class="tit">선납금</div>
-                                <span>7,650,000원 (30%)</span>
-                            </li>
-                            <li>
-                                <div class="tit">보증금</div>
-                                <span>0원 (0%)</span>
-                            </li>
-                            <li>
-                                <div class="tit">인수가</div>
-                                <span>17,650,000원</span>
-                            </li>
-                        </ul>
-                    </div>
+  <!-- 팝업 -->
+  <div class="layer_popup custom-alert-pop">
+    <button class="btn-show" onclick="togglePopup();"></button>
+    <div class="pop_inner">
+        <div class="pop-head">
+        </div>
+        <!-- 컨텐츠 -->
+        <div class="pop-contents agree-accordion-wrap">
+            <!-- 견적박스 -->
+            <div class="price-box">
+                <!-- <h3 class="pop-tit">다이렉트 견적</h3>
+                <h4>제네시스 더 올뉴 G80 가솔린 2.5 2WD 기본형</h4> -->
+                <div class="ex-box">
+                    <ul>
+                        <li>
+                            <div class="tit">차량판매가</div>
+                            <span>48,500,000원</span>
+                        </li>
+                        <li>
+                            <div class="tit">이전등록비</div>
+                            <span>1,250,000원</span>
+                        </li>
+                        <li>
+                            <div class="tit">매도수수료</div>
+                            <span>100,000원</span>
+                        </li>
+                        <li>
+                            <div class="tit">탁송료</div>
+                            <span>55,000원</span>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="calculate-sum">
-                <dl>
-                    <dt>총 예상 결제금액</dt>
-                </dl>
-                <strong><span>30,580,000원</span></strong>
-            </div>
         </div>
-        <div class="btn-wrap">
-            <button type="button">상담 신청하기</button>
-            <button type="button" class="contract" onclick='location.href="./direct_01_1.html"'>다음</button>
+        <div class="calculate-sum">
+            <dl>
+                <dt>총 예상 결제금액</dt>
+                <!-- <dl>차량가 부가세(VAT)포함</dl> -->
+            </dl>
+            <strong><span>49,905,000원</span></strong>
         </div>
     </div>
+    <div class="btn-wrap">
+        <button type="button">상담 신청하기</button>
+        <button type="button" class="contract" onclick="location.href='./direct_01_2.html'">다음</button>
+    </div>
+</div>
+
+<script>
+    function togglePopup() {
+        const popup = document.querySelector('.price-box');
+        const btnShow = document.querySelector('.btn-show');
+
+        // 팝업 활성화
+        popup.classList.toggle('show');
+
+        // 버튼에 'on' 클래스 토글
+        btnShow.classList.toggle('on');
+    }
+</script>
 </body>
 </html>
