--- a/mobile/direct_01_1.html
+++ b/mobile/direct_01_1.html
@@ -257,8 +257,8 @@
                     </div>
                 </div>
                 <div class="tab type01">
-                    <button type="button" data-tab="tab1" class="">단독명의로 구매해요</button>
-                    <button type="button" data-tab="tab2" class="on">공동명의자가 있어요</button>
+                    <button type="button" data-tab="tab1" class="" onclick="activateTab('tab1');">단독명의로 구매해요</button>
+                    <button type="button" data-tab="tab2" class="on" onclick="activateTab('tab2');">공동명의자가 있어요</button>
                 </div>
                 <div class="tab-content" id="tab1"></div>
                 <div class="tab-content on" id="tab2">
@@ -319,7 +319,7 @@
     
     <!-- 팝업 -->
     <div class="layer_popup custom-alert-pop">
-        <button class="btn-show"></button>
+        <button class="btn-show" onclick="togglePopup();"></button>
         <div class="pop_inner">
             <div class="pop-head">
             </div>
@@ -327,25 +327,25 @@
             <div class="pop-contents agree-accordion-wrap">
                 <!-- 견적박스 -->
                 <div class="price-box">
-                    <h3 class="pop-tit">다이렉트 견적</h3>
-                    <h4>제네시스 더 올뉴 G80 가솔린 2.5 2WD 기본형</h4>
+                    <!-- <h3 class="pop-tit">다이렉트 견적</h3>
+                    <h4>제네시스 더 올뉴 G80 가솔린 2.5 2WD 기본형</h4> -->
                     <div class="ex-box">
                         <ul>
                             <li>
-                                <div class="tit">신차가</div>
+                                <div class="tit">차량판매가</div>
                                 <span>48,500,000원</span>
                             </li>
                             <li>
-                                <div class="tit">선납금</div>
-                                <span>7,650,000원 (30%)</span>
+                                <div class="tit">이전등록비</div>
+                                <span>1,250,000원</span>
                             </li>
                             <li>
-                                <div class="tit">보증금</div>
-                                <span>0원 (0%)</span>
+                                <div class="tit">매도수수료</div>
+                                <span>100,000원</span>
                             </li>
                             <li>
-                                <div class="tit">인수가</div>
-                                <span>17,650,000원</span>
+                                <div class="tit">탁송료</div>
+                                <span>55,000원</span>
                             </li>
                         </ul>
                     </div>
@@ -355,7 +355,7 @@
                 <dl>
                     <dt>총 예상 결제금액</dt>
                 </dl>
-                <strong><span>30,580,000원</span></strong>
+                <strong><span>49,905,000원</span></strong>
             </div>
         </div>
         <div class="btn-wrap">
@@ -363,5 +363,45 @@
             <button type="button" class="contract" onclick="location.href='./direct_01_2.html'">다음</button>
         </div>
     </div>
+
+    <script>
+        function togglePopup() {
+            const popup = document.querySelector('.price-box');
+            const btnShow = document.querySelector('.btn-show');
+
+            // 팝업 활성화
+            popup.classList.toggle('show');
+
+            // 버튼에 'on' 클래스 토글
+            btnShow.classList.toggle('on');
+        }
+    </script>
+
+    <script>
+        function activateTab(tabId) {
+            // 모든 탭 버튼과 콘텐츠를 초기화
+            const buttons = document.querySelectorAll('.tab button');
+            const contents = document.querySelectorAll('.tab-content');
+
+            buttons.forEach(button => {
+                button.classList.remove('on');
+            });
+
+            contents.forEach(content => {
+                content.classList.remove('on');
+            });
+
+            // 선택된 탭 버튼과 콘텐츠에 'on' 클래스 추가
+            const activeButton = document.querySelector(`button[data-tab="${tabId}"]`);
+            const activeContent = document.getElementById(tabId);
+
+            if (activeButton) {
+                activeButton.classList.add('on');
+            }
+            if (activeContent) {
+                activeContent.classList.add('on');
+            }
+        }
+    </script>
 </body>
 </html>
