--- a/pc/main.html
+++ b/pc/main.html
@@ -19,8 +19,6 @@
 	<meta id="_csrf" name="_csrf" content="e0f721a0-f4ca-4e8b-b351-846e7d0a6c7b">
 	<!-- default header name is X-CSRF-TOKEN -->
 	<meta id="_csrf_header" name="_csrf_header" content="X-CSRF-TOKEN">
-
-	<!-- th:block layout:fragment="title"></th:block-->
 	<title>롯데렌터카 마이카 세이브</title>
 
 	<!-- 공통 링크 s -->
@@ -30,10 +28,7 @@
 	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/jquery.mCustomScrollbar.css?version=f450d3443c71493fa90f649d39b31283">
 	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/et_ux.css?version=f450d3443c71493fa90f649d39b31283">
 
-	
-		<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/common_new.css?version=f450d3443c71493fa90f649d39b31283" as="style" onload="this.onload=null;this.rel='stylesheet'">
-
-	
+	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/common_new.css?version=f450d3443c71493fa90f649d39b31283" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
 	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/search-list.css?version=f450d3443c71493fa90f649d39b31283">
 	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/main.css?version=f450d3443c71493fa90f649d39b31283">
@@ -45,51 +40,17 @@
 	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/popup.css?version=f450d3443c71493fa90f649d39b31283">
 	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/process.css?version=f450d3443c71493fa90f649d39b31283">
 	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/mypage.css?version=f450d3443c71493fa90f649d39b31283">
-
-<!--	<th:block th:if="${isCarToHomeCancel != null}">-->
-<!--		<link rel="stylesheet" th:href="@{|https://mycarsave.lotterentacar.net/pc/css/cartohome.css?version=${staticVersion}|}" />-->
-<!--	</th:block>-->
-<!--	<th:block th:unless="${isCarToHomeCancel != null}">-->
-<!--		<link rel="stylesheet" th:href="@{|https://mycarsave.lotterentacar.net/pc/css/cartohome-new.css?version=${staticVersion}|}" />-->
-<!--	</th:block>-->
-
 	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/custom.css?version=f450d3443c71493fa90f649d39b31283">
 	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/react-360-view.css?version=f450d3443c71493fa90f649d39b31283">
 	<link rel="stylesheet" href="https://mycarsave.lotterentacar.net/pc/css/landing.css?version=f450d3443c71493fa90f649d39b31283">
-	<!-- photo upload library -->
-<!--	<link rel="stylesheet" th:href="@{|https://mycarsave.lotterentacar.net/pc/js/dropzone/dropzone.css?version=${staticVersion}|}" />-->
-<!--	<link rel="stylesheet" th:href="@{|https://mycarsave.lotterentacar.net/pc/js/cropper/cropper.min.css?version=${staticVersion}|}" />-->
-
-	<!-- cropper library css -->
-<!--	<th:block th:if="${hasImageEditor != null}">-->
-<!--		<link rel="stylesheet" th:href="@{|https://mycarsave.lotterentacar.net/pc/css/image-editor.css?version=${staticVersion}|}" type="text/css"/>-->
-<!--	</th:block>-->
 	<script src="https://mycarsave.lotterentacar.net/pc/js/jquery-3.4.1.min.js"></script>
 	<script src="https://mycarsave.lotterentacar.net/pc/js/jquery-ui.min.js"></script>
 	<script src="https://mycarsave.lotterentacar.net/pc/js/swiper.min.js"></script>
 <!--	스와이퍼 번들추가-->
 	<script src="https://mycarsave.lotterentacar.net/pc/js/swiper-bundle.min.js"></script>
-<!--	<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/jquery.panzoom.min.js}"></script>-->
 	<script src="https://mycarsave.lotterentacar.net/pc/js/jquery.mousewheel.js"></script>
 	<script src="https://mycarsave.lotterentacar.net/pc/js/jquery.mCustomScrollbar.concat.min.js"></script>
-<!--	<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/imagesloaded.pkgd.min.js}"></script>-->
-<!--	<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/masonry.pkgd.min.js}"></script>-->
 	<script src="https://mycarsave.lotterentacar.net/pc/js/const.js?version=f450d3443c71493fa90f649d39b31283"></script>
-	<!--<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/jquery-1.10.2.min.js}"></script>-->
-<!--	<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/modernizr-2.7.1-csstransforms3d-canvas-touch.js}"></script>-->
-<!--	<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/megapix-image.js}"></script>-->
-<!--	<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/three.min.js}"></script>-->
-<!--	<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/Detector.js}"></script>-->
-<!--	<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/CSS3DRenderer.js}"></script>-->
-<!--	<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/theta-viewer.js}"></script>-->
-<!--	<th:block th:if="${hasImageEditor != null}">-->
-<!--		<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/dropzone/dropzone.min.js}"></script>-->
-<!--		<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/cropper/cropper.min.js}"></script>-->
-<!--		<script th:src="@{https://mycarsave.lotterentacar.net/pc/js/cropper/jquery-cropper.js}"></script>-->
-<!--	</th:block>-->
-	<!-- image editor style -->
-	<!--<script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>-->
-	
 	<!-- 퍼블용 -->
 	<link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
 	<script src="../pc/js/jquery-3.4.1.min.js"></script>
@@ -123,11 +84,24 @@
 				<h1 class="logo-wrap"><a href="/" class="ir">롯데렌터카 마이카 세이브</a></h1>
 				<nav>
 					<ul>
-						<li class="depth1"><a href="#">구매하기</a></li>
-						<li class="depth1"><a href="/cr/search/list">중고차렌트</a></li>
+						<li class="depth1"><a href="/cr/search/list">차량검색</a></li>
 						<li class="depth1"><a href="/rental/new">신차렌트</a></li>
 						<!-- <li class="depth1"><a href="/rental/lease">오토리스</a></li> -->
-						<li class="depth1"><a href="https://www.lotterentacar.net/hp/kor/usedCar/sellmycar/myCarSellApply.do" target="_blank">내차팔기</a></li>
+						<li class="depth1"><a href="#" target="_blank">내차팔기</a></li>
+						<li class="depth1 serviceInfo on"><a href="#" target="_blank">서비스안내</a>
+						
+							<ul class="sub-menu">
+								<li><a href="/cs/noti/list">공지사항</a></li>
+								<li><a href="/cs/faq/list">FAQ</a></li>
+								<!-- <li><a href="/cs/event/list">이벤트</a></li> -->
+								<li><a href="/cr/theme/list">기획전</a></li>
+								<li><a href="/co/compare/main">비교하기</a></li>
+								<!-- <li><a href="/mypage/interest/rcntList">최근 본 차량</a></li>-->
+								<!-- <li th:if="${loginYn == 'Y'}"><a href="/mypage/interest/intrsList">관심차량</a></li>-->
+								<li><a href="/cr/review/list">고객후기</a></li>
+							</ul>
+
+						</li>
 						<li class="btn-login"><button type="button" class="bt-btn-login">로그인</button></li>							
 						
 						<li class="btn-more">
@@ -158,6 +132,14 @@
 					$(this).toggleClass("on");
 				});
 			});
+
+			$(document).ready(function() {
+				$(".serviceInfo").click(function() {
+					$(this).toggleClass("on");
+				});
+			});
+
+			
 	
 		</script>
 	</header>
@@ -173,7 +155,12 @@
 							<span class="vsEx">4일 환불보장<br>홈서비스 받고 구매하기</span>
 							<i class="btnAroow"></i> 
 						</a>
-						<div class="vsBg1"></div>
+						<div class="main_bg_video">
+							<video class="main_video_content" autoplay muted loop playsinline poster="./images/renew/icon/video_cover.svg">
+							  <source src="../mobile/images/main_visual.mp4" type="video/mp4" />
+							  <source src="img/video.webm" type="video/webm" />
+							</video>
+						</div>
 					</div>
 					<div class="vsRight">
 						<a href="#">
@@ -287,10 +274,10 @@
 		
 		<div class="mainCon2">
 			<div class="carCateWrap" data-aos="fade-up" data-aos-once="true">
-				<div class="titTab">
+				<!-- <div class="titTab">
 					<button type="button" class="active">구매하고 싶어요</button>
 					<button type="button">렌트하고 싶어요</button>
-				</div>
+				</div> -->
 
 				<div class="cateTab">
 					<button type="button" class="brandTxt" disabled="disabled">
@@ -911,22 +898,22 @@
 						<ul class="swiper-wrapper">
 							<li class="swiper-slide">
 								<div class="imgBx">
-									<img src="../pc/images/renew/ban_service1.png">
+									<img src="../pc/images/renew/main_service_info_01.png">
 								</div>			
 							</li>		
 							<li class="swiper-slide">
 								<div class="imgBx">
-									<img src="../pc/images/renew/ban_service2.png">
+									<img src="../pc/images/renew/main_service_info_02.png">
 								</div>
 							</li>		
 							<li class="swiper-slide">
 								<div class="imgBx">
-									<img src="../pc/images/renew/ban_service3.png">
+									<img src="../pc/images/renew/main_service_info_03.png">
 								</div>
 							</li>		
 							<li class="swiper-slide">
 								<div class="imgBx">
-									<img src="../pc/images/renew/ban_service4.png">
+									<img src="../pc/images/renew/main_service_info_04.png">
 								</div>
 							</li>		
 						</ul>
